# CD_AI_back_end

./: .gitignore  README.md  database_setup.py  main.py  pyproject.toml
app/: config.py  database.py  static_config.py
app/api/v1/: routes.py
app/api/v1/endpoints/: __init__.py  admin.py  agent_api.py  ai_review.py  annotations.py  documents.py  groups.py  notifications.py  papers.py  users.py
app/core/: dependencies.py  security.py
app/middleware/: operation_logger.py
app/schemas/: annotation.py  document.py  notification.py  user.py
app/services/: ai_adapter.py  audit.py  document.py
app/tasks/: cleanup_ddl.py
