[project]
name = "cd-ai-back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.0",
    "aiohttp>=3.9.0",
    "dnspython==2.8.0",
    "docx2pdf==0.1.8",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "email-validator==2.3.0",
    "loguru>=0.7.3",
    "numpy==2.2.6",
    "packaging==26.0",
    "pandas==2.3.3",
    "pip==26.0.1",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dateutil==2.9.0.post0",
    "pymysql>=1.1.2",
    "pytz==2026.1.post1",
    "python-multipart>=0.0.21",
    "setuptools==82.0.1",
    "six==1.17.0",
    "tqdm==4.67.3",
    "tzdata==2026.1",
    "requests>=2.32.5",
    "wheel==0.46.3",
    "uvicorn>=0.40.0",
]
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
